force-app/main/default/objects/Media_Connect_Version__c/Media_Connect_Version__c.object-meta.xml
<CustomObject>
    <label>Media Connect Version</label>
    <nameField>
        <displayFormat>MCV-{0000}</displayFormat>
        <label>SF ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Connect Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>