force-app/main/default/objects/Media_Connect_Version__c/fields/CSKeyValue__c.field-meta.xml
<CustomField>
    <fullName>CSKeyValue__c</fullName>
    <label>CSKeyValue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>