force-app/main/default/objects/Media_Connect_Version__c/fields/PPONumValue__c.field-meta.xml
<CustomField>
    <fullName>PPONumValue__c</fullName>
    <label>PPO Num</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>