force-app/main/default/objects/Media_Connect_Version__c/fields/SubscriptionID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Media Connect Versions</relationshipLabel>
    <relationshipName>Media_Connect_Versions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>